# Difix3D

./: .gitignore  pyproject.toml
examples/: create_dataset.py
examples/gsplat/datasets/: colmap.py
