[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "difix3d"
version = "0.1.0"
description = "Difix3D package"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.hatch.build.targets.wheel]
packages = ["src/difix3d"]
